# StoragesGoods

./: .env  alembic.ini  pyproject.toml
migration/versions/: 1cc4e852d6d8_initial.py  3e4d75cb701a_create_new_tables.py  a631954fe011_users.py
src/: main.py
src/project/api/: auth_routes.py  client_routes.py  depends.py  expense_routes.py  good_routes.py  goodsexpense_routes.py  goodsgroup_routes.py  goodsreceipt_routes.py  goodstransfer_routes.py  producer_routes.py  receipt_routes.py  routes.py  storage_routes.py  storagemethod_routes.py  storageplace_routes.py  supplier_routes.py
src/project/core/: config.py  exceptions.py
src/project/infrastructure/postgres/: models.py
src/project/infrastructure/postgres/repository/: client_repo.py  expense_repo.py  good_repo.py  goodsexpense_repo.py  goodsgroup_repo.py  goodsreceipt_repo.py  goodstransfer_repo.py  producer_repo.py  receipt_repo.py  storage_repo.py  storagemethod_repo.py  storageplace_repo.py  supplier_repo.py
src/project/schemas/: client.py  expense.py  good.py  goodsexpense.py  goodsgroup.py  goodsreceipt.py  goodstransfer.py  producer.py  receipt.py  storage.py  storagemethod.py  storageplace.py  supplier.py  user.py  userregister.py
